// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default Object: Object 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id',
  },
  world: {
    defaultMessage: 'world',
  },
  headerTitle: {
    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.',
  },
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id'
  },
  world: {
    'id': 'src.__fixtures__.world',

    defaultMessage: 'world'
  },
  headerTitle: {
    'id': 'src.__fixtures__.headerTitle',

    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.'
  }
});
"
`;

exports[`default default: default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`default eval string: eval string 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello' + 'world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.helloworld',
    'defaultMessage': 'hello' + 'world'
  }
});
"
`;

exports[`default import as: import as 1`] = `
"
import { defineMessages as m } from 'react-intl'

m({
  hello: 'hello'
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages as m } from 'react-intl';

m({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`default leading comment with description: leading comment with description 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({

  // This comment should not be used
  world: {
    defaultMessage: 'hello world',
    description: 'The hello world',
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({

  // This comment should not be used
  world: {
    'id': 'src.__fixtures__.world',

    defaultMessage: 'hello world',
    description: 'The hello world'
  }
});
"
`;

exports[`default leading comment: leading comment 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  // The main Hello of our app.
  hello: 'hello',

  // Another Hello,
  // multiline this time
  world: {
    id: 'hello.world',
    defaultMessage: 'hello world',
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  // The main Hello of our app.
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello',
    'description': 'The main Hello of our app.'
  },

  // Another Hello,
  // multiline this time
  world: {
    id: 'hello.world',
    defaultMessage: 'hello world',
    'description': 'Another Hello,\\\\nmultiline this time'
  }
});
"
`;

exports[`default multi export: multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello world extra'
})

export default defineMessages({
  hello: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`default not transform if callee is not identifier: not transform if callee is not identifier 1`] = `
"
import { defineMessages } from 'react-intl'

const m = [defineMessages]

export default m[0]({
  hello: 'hello world'
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

const m = [defineMessages];

export default m[0]({
  hello: 'hello world'
});
"
`;

exports[`default not transform if defineMessages is not imported: not transform if defineMessages is not imported 1`] = `
"
import any from 'any-module'

export default defineMessages({
  hello: 'hello'
})

      ↓ ↓ ↓ ↓ ↓ ↓

import any from 'any-module';

export default defineMessages({
  hello: 'hello'
});
"
`;

exports[`default not transform when defineMessages argumens is empty: not transform when defineMessages argumens is empty 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages()

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages();
"
`;

exports[`default not transform when defineMessages argumens is not object: not transform when defineMessages argumens is not object 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages(1)

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages(1);
"
`;

exports[`default not transfrom when the variable can not be found: not transfrom when the variable can not be found 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages(messages)

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages(messages);
"
`;

exports[`default string literal: string literal 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  'hello': 'hello world'
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  'hello': {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`default when using the variable: when using the variable 1`] = `
"
import { defineMessages } from 'react-intl'

const messages = {hello: 'hello'}

export default defineMessages(messages)

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

const messages = { hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  } };

export default defineMessages(messages);
"
`;

exports[`default with include value: with include value 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: \`hello world \${1}\`,
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': \`hello world \${1}\`
  }
});
"
`;

exports[`default with other func: with other func 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
})

hello({
  id: 'hoge',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  }
});

hello({
  id: 'hoge'
});
"
`;

exports[`default with other specifier: with other specifier 1`] = `
"
import { defineMessages, FormattedMessage } from 'react-intl'

export default defineMessages({
  hello: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages, FormattedMessage } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`extractComments = false default: default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`extractComments = false leading comment with description: leading comment with description 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({

  // This comment should not be used
  world: {
    defaultMessage: 'hello world',
    description: 'The hello world',
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({

  // This comment should not be used
  world: {
    'id': 'src.__fixtures__.world',

    defaultMessage: 'hello world',
    description: 'The hello world'
  }
});
"
`;

exports[`extractComments = false leading comment: leading comment 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  // The main Hello of our app.
  hello: 'hello',

  // Another Hello,
  // multiline this time
  world: {
    id: 'hello.world',
    defaultMessage: 'hello world',
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  // The main Hello of our app.
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },

  // Another Hello,
  // multiline this time
  world: {
    id: 'hello.world',
    defaultMessage: 'hello world'
  }
});
"
`;

exports[`filebase = true default: default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`includeExportName = all default: default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.default.hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`includeExportName = all multi export: multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello world extra'
})

export default defineMessages({
  hello: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.extra.hello',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.default.hello',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`includeExportName = true default: default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`includeExportName = true multi export: multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello world extra'
})

export default defineMessages({
  hello: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.extra.hello',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src" default: default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`removePrefix = "src/" -- with slash default: default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`removePrefix = false default: default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`removePrefix = false multi export: multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello world extra'
})

export default defineMessages({
  hello: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = all default: default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'default.hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = all multi export: multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello world extra'
})

export default defineMessages({
  hello: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'extra.hello',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'default.hello',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = true default: default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'hello',
    'defaultMessage': 'hello'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = true multi export: multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello world extra'
})

export default defineMessages({
  hello: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'extra.hello',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'hello',
    'defaultMessage': 'hello world'
  }
});
"
`;
